2004-05-28  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/qmtest (check_python_version): Clarify error message.

2004-05-27  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/qmtest (check_python_version): Rework to avoid using
	newer Python features.

2004-05-26  Mark Mitchell  <mark@codesourcery.com>

	* MANIFEST.in (qm/test/doc/html/qm.css): Include it.

2004-05-25  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/execution_engine.py
	(ExecutionEngine._WriteInitialAnnotations): Check that uname is
	not None before trying to write it out.
	* qm/test/qmtest (qm.sigmask): Import it in the global scope, not
	...
	(main): ... here.

2004-05-24  Mark Mitchell  <mark@codesourcery.com>

	* NEWS: Mention improvements in 2.2.

	* GNUmakefile.in (distclean): Remove MANIFEST.
	* setup.py: Install documentation stylesheet.
	* doc/qm-sgml.dsl: Use documentation stylesheet.
	* doc/qm.css: Incorporate bits of CodeSourcery web site
	look-and-feel.
	* qmdist/command/build_doc.py (build_doc.run): Copy documentation
	stylesheet to HTML directory.
	
	* qm/test/doc/manual.xml: Update copyright date and version
	number.

2004-05-24  Nathaniel Smith  <njs@codesourcery.com>

	* qmdist/command/build_doc.py (build_doc.run): Create
	'doc/qm-version' file.
	* doc/qm.mod: Define entity 'qm_version' to its contents.
	* qm/test/doc/manual.xml (internal_doc_url): Use
	'qm_version_entity' in definition.

2004-05-21  Nathaniel Smith  <njs@codesourcery.com>

	* qm/test/target.py (Target.Start): Add instance variable
	'__order_of_resources'.
	(Target._FinishResourceSetUp): Record resource setup order in
	it.
	(Target.Stop): Use it to determine resource cleanup order.
	* tests/regress/resource_ordering: New test.
	
2004-05-21  Nathaniel Smith  <njs@codesourcery.com>

	* Makefile: Switch default copyright date to 2004.
	* docbook: Likewise.
	* docbook-chapter: Likewise.
	* dtml: Likewise.
	* html: Likewise.
	* py: Likewise.
	* xml: Likewise.
	